# ros_2cli

./: 1-local.list  Packages  README.md  Release  local.yaml  ros-rolling-ros-2cli_0-2023.03.19.17.22_amd64-2023-03-19T17:22:34Z.build  ros-rolling-ros-2cli_0-2023.03.19.17.22_amd64.build  ros-rolling-ros-2cli_0-2023.03.19.17.22_amd64.buildinfo  ros-rolling-ros-2cli_0-2023.03.19.17.22_amd64.changes  ros-rolling-ros-2cli_0-2023.03.19.17.22_amd64.deb
.github/workflows/: dco.yaml  package.yaml  test.yaml
ros_2cli/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml  setup.cfg  setup.py
ros_2cli/completion/: ROS-argcomplete.bash  ROS-argcomplete.zsh
ros_2cli/env-hooks/: ros-2cli_path.sh
ros_2cli/resource/: package.dsv
ros_2cli/ros_2cli/: cli.py
