<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_2cli</name>
  <version>0.2.0</version>
  <description>Brand-compliant 'ROS 2' and 'ROS 1' command aliases with autocompletion support.</description>

  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/christophebedard/ros-2cli</url>
  <url type="repository">https://github.com/christophebedard/ros-2cli</url>
  <url type="bugtracker">https://github.com/christophebedard/ros-2cli/issues</url>

  <author email="bedard.christophe@gmail.com">Christophe Bedard</author>

  <depend>ros2cli</depend>

  <exec_depend>python3-argcomplete</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
